<resources>
    <string name="app_name">Event Access</string>
    <string name="register">Register</string>
    <string name="addYourDetail">Add your personal details</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email Id</string>
    <string name="phone">Mobile Number</string>
    <string name="submitBtn">Submit</string>
    <string name="qrcode">QR Code</string>
    <string name="showThisQrCode">Show this QR Code for your seamless access to the event</string>
    <string name="scanText">Scan QR Code</string>
    <string name="accessText">To access the event please scan QR code</string>
    <string name="notification">Notifications</string>
    <string name="notifiheader">Lorem ispum dolar sit amet,</string>
    <string name="notifiDesc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="msg_token_fmt">Current FCM Token %s</string>
</resources>
