<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">



    <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/dividers"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp"
            android:showDividers="middle">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/detailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/addYourDetail"
                android:textColor="@color/grey"
                android:textSize="25sp" />

        </LinearLayout>
    <ScrollView
        android:layout_below="@id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/child1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/transparent"
            android:divider="@drawable/dividers"
            android:orientation="vertical"
            android:padding="40dp"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/regtopbg"
                android:orientation="vertical"
                android:padding="15sp">

                <TextView
                    android:id="@+id/fullNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullName"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:inputType="textPersonName|textCapSentences"
                    android:paddingLeft="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15sp">

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/regbottombg"
                android:orientation="vertical"
                android:padding="15sp">

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:minLines="1"
                    android:paddingLeft="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbackground"
                android:text="@string/submitBtn"
                android:textColor="@color/white"
                android:letterSpacing="0.1"
                android:onClick="submitData"
                android:textSize="23sp"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>